--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -2,6 +2,8 @@ $accentColor: #3eaf7c;
 $textColor: #2c3e50;
 $borderColor: #eaecef;
 
+$code-universal-bg: #272822;
+
 :root {  
   --accent-color: #{$accentColor};
   --accent-color-lighter: #{lighten($accentColor, 8%)};
@@ -27,7 +29,7 @@ $borderColor: #eaecef;
   
   --arrow-bg-color: #ccc;
   
-  --code-bg-color: #282c34;
+  --code-bg-color: #{$code-universal-bg};
   --code-color: #ffffff;
   --inline-code-bg-color: rgba(27, 31, 35, 0.05);
   --inline-code-color: #{lighten($textColor, 20%)};
@@ -72,7 +74,7 @@ $borderColor: #eaecef;
   
     --arrow-bg-color: #{invert(#ccc)};
   
-    --code-bg-color: #{invert(#282c34)};
+    --code-bg-color: #{$code-universal-bg};
     --code-color: #{$textColor};
     --inline-code-bg-color: #{invert(rgba(27, 31, 35, 0.95))};
     --inline-code-color: #{darken(invert($textColor), 20%)};
